--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Boolando</title>
 </head>
-<body>
+
+<body class="debug">
     <header></header>
     <main>
         <div class="contenitore">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">
+                <div class="immagine"><img src="img/1.webp" alt=""></div>
+                <div class="descrizione">
+                    <h2>Levi's</h2>
+                    <h3>RELAXED FIT TEE UNISEX</h3>
+                    <span class="primo-prezzo">14,99 €</span>
+                    <span class="secondo-prezzo">29,99 €</span>
+                </div>
+            </div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
         </div>
 
 
     </main>
     <footer></footer>
 </body>
+
 </html>
