feat: fine box, novo font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FONT Awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- /FONT Awesome  -->
+    <!-- MY CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- /MY CSS -->
     <title>Boolando</title>
 </head>
 
@@ -12,20 +19,92 @@
     <header></header>
     <main>
         <div class="contenitore">
+            <!-- BOX 1 -->
             <div class="box">
+                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
                 <div class="immagine"><img src="img/1.webp" alt=""></div>
                 <div class="descrizione">
                     <h2>Levi's</h2>
                     <h3>RELAXED FIT TEE UNISEX</h3>
                     <span class="primo-prezzo">14,99 €</span>
                     <span class="secondo-prezzo">29,99 €</span>
+                    <div class="importante">
+                        <span class="sconto">-50%</span>
+                        <span class="qualita">Sostenibilità</span>
+                    </div>
                 </div>
             </div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
-            <div class="box">5</div>
-            <div class="box">6</div>
+            <!-- /BOX 1 -->
+            <!-- BOX 2 -->
+            <div class="box">
+                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="immagine"><img src="img/2.webp" alt=""></div>
+                <div class="descrizione">
+                    <h2>Guess</h2>
+                    <h3>ROSES TEE</h3>
+                    <span class="primo-prezzo">20,99 €</span>
+                    <span class="secondo-prezzo">29,99 €</span>
+                    <div class="importante">
+                        <span class="sconto">-30%</span>
+                    </div>
+                </div>
+            </div>
+            <!-- /BOX 2 -->
+            <!-- BOX 3 -->
+            <div class="box">
+                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="immagine"><img src="img/3.webp" alt=""></div>
+                <div class="descrizione">
+                    <h2>Come Zucchero Filato</h2>
+                    <h3>VOGLIA DI COLORI PASTELLO</h3>
+                    <span class="primo-prezzo">129,99 €</span>
+                    <span class="secondo-prezzo">184,99 €</span>
+                    <div class="importante">
+                        <span class="sconto">-30%</span>
+                    </div>
+                </div>
+            </div>
+            <!-- BOX 4 -->
+            <div class="box">
+                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="immagine"><img src="img/4.webp" alt=""></div>
+                <div class="descrizione">
+                    <h2>Levi's</h2>
+                    <h3>TEE UNISEX</h3>
+                    <span class="primo-prezzo">14,99 €</span>
+                    <span class="secondo-prezzo">29,99 €</span>
+                    <div class="importante">
+                        <span class="sconto">-50%</span>
+                        <span class="qualita">Sostenibilità</span>
+                    </div>
+                </div>
+            </div>
+            <!-- /BOX 4 -->
+            <!-- BOX 5 -->
+            <div class="box">
+                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="immagine"><img src="img/5.webp" alt=""></div>
+                <div class="descrizione">
+                    <h2>Maya Deluxe</h2>
+                    <h3>STRIPE BODICE</h3>
+                    <span class="primo-prezzo">99,99 €</span>
+                </div>
+            </div>
+            <!-- /BOX 5 -->
+            <!-- BOX 6 -->
+            <div class="box">
+                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="immagine"><img src="img/6.webp" alt=""></div>
+                <div class="descrizione">
+                    <h2>Esprit</h2>
+                    <h3>MAGLIONE - BLACK</h3>
+                    <span class="primo-prezzo">29,99 €</span>
+                    <div class="importante">
+                        <span class="qualita">Sostenibilità</span>
+                    </div>
+                </div>
+            </div>
+            <!-- /BOX 6 -->
         </div>
 
 
