--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <!-- BOX 1 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="immagine"><img src="img/1.webp" alt=""></div>
+                <div class="cambio-immagine">
+                    <img class="immagine" src="img/1.webp" alt="">
+                    <img class="immagine-nascosta" src="img/1b.webp" alt="">
+                </div>
                 <div class="descrizione">
                     <h2>Levi's</h2>
                     <h3>RELAXED FIT TEE UNISEX</h3>
@@ -38,7 +41,7 @@
             <!-- BOX 2 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="immagine"><img src="img/2.webp" alt=""></div>
+                <div class="cambio-immagine"><img src="img/2.webp" alt=""></div>
                 <div class="descrizione">
                     <h2>Guess</h2>
                     <h3>ROSES TEE</h3>
@@ -53,7 +56,7 @@
             <!-- BOX 3 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="immagine"><img src="img/3.webp" alt=""></div>
+                <div class="cambio-immagine"><img src="img/3.webp" alt=""></div>
                 <div class="descrizione">
                     <h2>Come Zucchero Filato</h2>
                     <h3>VOGLIA DI COLORI PASTELLO</h3>
@@ -67,7 +70,7 @@
             <!-- BOX 4 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="immagine"><img src="img/4.webp" alt=""></div>
+                <div class="cambio-immagine"><img src="img/4.webp" alt=""></div>
                 <div class="descrizione">
                     <h2>Levi's</h2>
                     <h3>TEE UNISEX</h3>
@@ -83,7 +86,7 @@
             <!-- BOX 5 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="immagine"><img src="img/5.webp" alt=""></div>
+                <div class="cambio-immagine"><img src="img/5.webp" alt=""></div>
                 <div class="descrizione">
                     <h2>Maya Deluxe</h2>
                     <h3>STRIPE BODICE</h3>
@@ -94,7 +97,7 @@
             <!-- BOX 6 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="immagine"><img src="img/6.webp" alt=""></div>
+                <div class="cambio-immagine"><img src="img/6.webp" alt=""></div>
                 <div class="descrizione">
                     <h2>Esprit</h2>
                     <h3>MAGLIONE - BLACK</h3>
