--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             <!-- BOX 2 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="cambio-immagine"><img src="img/2.webp" alt=""></div>
+                <div class="cambio-immagine">
+                    <img src="img/2.webp" alt="">
+                    <img class="immagine-nascosta" src="img/2b.webp" alt="">
+                </div>
                 <div class="descrizione">
                     <h2>Guess</h2>
                     <h3>ROSES TEE</h3>
@@ -56,7 +59,10 @@
             <!-- BOX 3 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="cambio-immagine"><img src="img/3.webp" alt=""></div>
+                <div class="cambio-immagine">
+                    <img src="img/3.webp" alt="">
+                    <img class="immagine-nascosta" src="img/3b.webp" alt="">
+                </div>
                 <div class="descrizione">
                     <h2>Come Zucchero Filato</h2>
                     <h3>VOGLIA DI COLORI PASTELLO</h3>
@@ -70,7 +76,10 @@
             <!-- BOX 4 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="cambio-immagine"><img src="img/4.webp" alt=""></div>
+                <div class="cambio-immagine">
+                    <img src="img/4.webp" alt="">
+                    <img class="immagine-nascosta" src="img/4b.webp" alt="">
+                </div>
                 <div class="descrizione">
                     <h2>Levi's</h2>
                     <h3>TEE UNISEX</h3>
@@ -86,7 +95,10 @@
             <!-- BOX 5 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="cambio-immagine"><img src="img/5.webp" alt=""></div>
+                <div class="cambio-immagine">
+                    <img src="img/5.webp" alt="">
+                    <img class="immagine-nascosta" src="img/5b.webp" alt="">
+                </div>
                 <div class="descrizione">
                     <h2>Maya Deluxe</h2>
                     <h3>STRIPE BODICE</h3>
@@ -97,7 +109,10 @@
             <!-- BOX 6 -->
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
-                <div class="cambio-immagine"><img src="img/6.webp" alt=""></div>
+                <div class="cambio-immagine">
+                    <img src="img/6.webp" alt="">
+                    <img class="immagine-nascosta" src="img/6b.webp" alt="">
+                </div>
                 <div class="descrizione">
                     <h2>Esprit</h2>
                     <h3>MAGLIONE - BLACK</h3>
