--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
 </head>
 
 <body class="debug">
-    <header></header>
+    <header>
+            <nav class="contenitore ">
+                <div>
+                    <a href="#">Donna</a>
+                    <a href="#">Uomo</a>
+                    <a href="#">Bambini</a>
+                </div>
+                <div>
+                    <img class="logo" src="img/boolean-logo.png" alt="">
+                </div>
+                <div class="speciali">
+                    <span><i class="fa-regular fa-user"></i></span>
+                    <span><i class="fa-regular fa-heart"></i></span>
+                    <span><i class="fa-solid fa-bag-shopping"></i></span>
+                </div>
+            </nav>
+    </header>
     <main>
         <div class="contenitore">
             <!-- BOX 1 -->
