feat:fine esercizio

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <title>Boolando</title>
 </head>
 
-<body class="debug">
+<body class="">
     <header>
+        <!-- BARRA DI NAVIGAZIONE -->
         <nav class="contenitore ">
             <div>
                 <a href="#">Donna</a>
@@ -24,7 +25,7 @@
                 <a href="#">Bambini</a>
             </div>
             <div>
-                <img class="logo" src="img/boolean-logo.png" alt="">
+                <img class="logo" src="img/boolean-logo.png" alt="logo boolean">
             </div>
             <div class="speciali">
                 <span><i class="fa-regular fa-user"></i></span>
@@ -32,6 +33,7 @@
                 <span><i class="fa-solid fa-bag-shopping"></i></span>
             </div>
         </nav>
+        <!-- /BARRA DI NAVIGAZIONE -->
     </header>
     <main>
         <div class="contenitore">
@@ -39,8 +41,8 @@
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
                 <div class="cambio-immagine">
-                    <img class="immagine" src="img/1.webp" alt="">
-                    <img class="immagine-nascosta" src="img/1b.webp" alt="">
+                    <img class="immagine" src="img/1.webp" alt="uomo maglia levi's">
+                    <img class="immagine-nascosta" src="img/1b.webp" alt=" uomo maglia levi's">
                 </div>
                 <div class="descrizione">
                     <h2>Levi's</h2>
@@ -58,8 +60,8 @@
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
                 <div class="cambio-immagine">
-                    <img src="img/2.webp" alt="">
-                    <img class="immagine-nascosta" src="img/2b.webp" alt="">
+                    <img src="img/2.webp" alt="donna maglia guess">
+                    <img class="immagine-nascosta" src="img/2b.webp" alt="donna maglia guess">
                 </div>
                 <div class="descrizione">
                     <h2>Guess</h2>
@@ -76,8 +78,8 @@
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
                 <div class="cambio-immagine">
-                    <img src="img/3.webp" alt="">
-                    <img class="immagine-nascosta" src="img/3b.webp" alt="">
+                    <img src="img/3.webp" alt="donna vestito verde">
+                    <img class="immagine-nascosta" src="img/3b.webp" alt="donna vestito marrone">
                 </div>
                 <div class="descrizione">
                     <h2>Come Zucchero Filato</h2>
@@ -93,8 +95,8 @@
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
                 <div class="cambio-immagine">
-                    <img src="img/4.webp" alt="">
-                    <img class="immagine-nascosta" src="img/4b.webp" alt="">
+                    <img src="img/4.webp" alt="uomo maglia levi's">
+                    <img class="immagine-nascosta" src="img/4b.webp" alt="uomo maglia levi's">
                 </div>
                 <div class="descrizione">
                     <h2>Levi's</h2>
@@ -112,8 +114,8 @@
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
                 <div class="cambio-immagine">
-                    <img src="img/5.webp" alt="">
-                    <img class="immagine-nascosta" src="img/5b.webp" alt="">
+                    <img src="img/5.webp" alt="donna vestito">
+                    <img class="immagine-nascosta" src="img/5b.webp" alt="donna vestito">
                 </div>
                 <div class="descrizione">
                     <h2>Maya Deluxe</h2>
@@ -126,8 +128,8 @@
             <div class="box">
                 <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
                 <div class="cambio-immagine">
-                    <img src="img/6.webp" alt="">
-                    <img class="immagine-nascosta" src="img/6b.webp" alt="">
+                    <img src="img/6.webp" alt="donna maglione nero">
+                    <img class="immagine-nascosta" src="img/6b.webp" alt="donna maglione nero">
                 </div>
                 <div class="descrizione">
                     <h2>Esprit</h2>
@@ -141,7 +143,29 @@
             <!-- /BOX 6 -->
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="contenitore-footer">
+            <!-- /INFO -->
+            <div>
+                <h1>Booleando s.r.l</h1>
+                <a href="#">informazioni legali</a>
+                <a href="#">inormativa sulla privacy</a>
+                <a href="#">Diritto di recesso</a>
+            </div>
+            <!-- /INFO -->
+            <!-- SOCIAL -->
+            <div>
+                <h2>Trovaci anche su</h2>
+                <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            <!-- /SOCIAL -->
+        </div>
+
+    </footer>
 </body>
 
 </html>
