feat: bonus cuore, ombre

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         <div class="contenitore">
             <!-- BOX 1 -->
             <div class="box">
-                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="cuore">
+                    <i class="fa-solid fa-heart" style="color: #000000;"></i>
+                    <i class="nascosta fa-solid fa-heart" style="color: red;"></i>
+                </div>
                 <div class="cambio-immagine">
                     <img class="immagine" src="img/1.webp" alt="uomo maglia levi's">
                     <img class="immagine-nascosta" src="img/1b.webp" alt=" uomo maglia levi's">
@@ -58,7 +61,10 @@
             <!-- /BOX 1 -->
             <!-- BOX 2 -->
             <div class="box">
-                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="cuore">
+                    <i class="fa-solid fa-heart" style="color: #000000;"></i>
+                    <i class="nascosta fa-solid fa-heart" style="color: red;"></i>
+                </div>
                 <div class="cambio-immagine">
                     <img src="img/2.webp" alt="donna maglia guess">
                     <img class="immagine-nascosta" src="img/2b.webp" alt="donna maglia guess">
@@ -76,7 +82,10 @@
             <!-- /BOX 2 -->
             <!-- BOX 3 -->
             <div class="box">
-                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="cuore">
+                    <i class="fa-solid fa-heart" style="color: #000000;"></i>
+                    <i class="nascosta fa-solid fa-heart" style="color: red;"></i>
+                </div>
                 <div class="cambio-immagine">
                     <img src="img/3.webp" alt="donna vestito verde">
                     <img class="immagine-nascosta" src="img/3b.webp" alt="donna vestito marrone">
@@ -93,7 +102,10 @@
             </div>
             <!-- BOX 4 -->
             <div class="box">
-                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="cuore">
+                    <i class="fa-solid fa-heart" style="color: #000000;"></i>
+                    <i class="nascosta fa-solid fa-heart" style="color: red;"></i>
+                </div>
                 <div class="cambio-immagine">
                     <img src="img/4.webp" alt="uomo maglia levi's">
                     <img class="immagine-nascosta" src="img/4b.webp" alt="uomo maglia levi's">
@@ -112,7 +124,10 @@
             <!-- /BOX 4 -->
             <!-- BOX 5 -->
             <div class="box">
-                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="cuore">
+                    <i class="fa-solid fa-heart" style="color: #000000;"></i>
+                    <i class="nascosta fa-solid fa-heart" style="color: red;"></i>
+                </div>
                 <div class="cambio-immagine">
                     <img src="img/5.webp" alt="donna vestito">
                     <img class="immagine-nascosta" src="img/5b.webp" alt="donna vestito">
@@ -126,7 +141,10 @@
             <!-- /BOX 5 -->
             <!-- BOX 6 -->
             <div class="box">
-                <div class="cuore"><i class="fa-solid fa-heart" style="color: #000000;"></i></div>
+                <div class="cuore">
+                    <i class="fa-solid fa-heart" style="color: #000000;"></i>
+                    <i class="nascosta fa-solid fa-heart" style="color: red;"></i>
+                </div>
                 <div class="cambio-immagine">
                     <img src="img/6.webp" alt="donna maglione nero">
                     <img class="immagine-nascosta" src="img/6b.webp" alt="donna maglione nero">
