fix: esercizio classe

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 </div>
                 <div class="cambio-immagine">
                     <img class="immagine" src="img/1.webp" alt="uomo maglia levi's">
-                    <img class="immagine-nascosta" src="img/1b.webp" alt=" uomo maglia levi's">
+                    <img class="immagine-nascosta" src="img/1b.webp" alt="uomo maglia levi's">
                 </div>
                 <div class="descrizione">
                     <h2>Levi's</h2>
                     <h3>RELAXED FIT TEE UNISEX</h3>
-                    <span class="primo-prezzo">14,99 €</span>
+                    <strong class="primo-prezzo">14,99 €</strong>
                     <span class="secondo-prezzo">29,99 €</span>
                     <div class="importante">
                         <span class="sconto">-50%</span>
@@ -72,7 +72,7 @@
                 <div class="descrizione">
                     <h2>Guess</h2>
                     <h3>ROSES TEE</h3>
-                    <span class="primo-prezzo">20,99 €</span>
+                    <strong class="primo-prezzo">20,99 €</strong>
                     <span class="secondo-prezzo">29,99 €</span>
                     <div class="importante">
                         <span class="sconto">-30%</span>
@@ -93,7 +93,7 @@
                 <div class="descrizione">
                     <h2>Come Zucchero Filato</h2>
                     <h3>VOGLIA DI COLORI PASTELLO</h3>
-                    <span class="primo-prezzo">129,99 €</span>
+                    <strong class="primo-prezzo">129,99 €</strong>
                     <span class="secondo-prezzo">184,99 €</span>
                     <div class="importante">
                         <span class="sconto">-30%</span>
@@ -113,7 +113,7 @@
                 <div class="descrizione">
                     <h2>Levi's</h2>
                     <h3>TEE UNISEX</h3>
-                    <span class="primo-prezzo">14,99 €</span>
+                    <strong class="primo-prezzo">14,99 €</strong>
                     <span class="secondo-prezzo">29,99 €</span>
                     <div class="importante">
                         <span class="sconto">-50%</span>
@@ -135,7 +135,7 @@
                 <div class="descrizione">
                     <h2>Maya Deluxe</h2>
                     <h3>STRIPE BODICE</h3>
-                    <span class="primo-prezzo">99,99 €</span>
+                    <strong class="primo-prezzo">99,99 €</strong>
                 </div>
             </div>
             <!-- /BOX 5 -->
@@ -152,7 +152,7 @@
                 <div class="descrizione">
                     <h2>Esprit</h2>
                     <h3>MAGLIONE - BLACK</h3>
-                    <span class="primo-prezzo">29,99 €</span>
+                    <strong class="primo-prezzo">29,99 €</strong>
                     <div class="importante">
                         <span class="qualita">Sostenibilità</span>
                     </div>
